Updated test cases to reflect change in API